--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,17 +4,7 @@
   padding: 2rem;
   text-align: center;
 }
-.button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #0aeb7e;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -30,84 +20,25 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-.container {
+.App{
   display: flex;
-  margin-top: 100;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  background-color: #fd0000;
-  padding: 20px;
+  /* justify-content: center; */
+  height: 100vh;
+
 }
-
-.head {
-  margin-top: 50px;
-  font-weight: bold;
-  font-size: 45px;
-  font-style: italic;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-
-.image {
-  width: 231px;
-  height: 218px;
-  margin-bottom: 20px;
-}
-
-.title {
-  font-size: 18px;
-  text-align: center;
-  margin-top: 20px;
-  color: #4D2828;
-}
-
 .button {
   background-color: #D67638;
   padding: 15px 25px;
+  margin:10px;
   border-radius: 10px;
   margin-top: 20px;
   cursor: pointer;
+  
 }
 
-.buttonText {
-  color: black;
-  font-weight: bold;
-  font-size: 19px;
-}
 
-.caption {
-  margin-top: 50px;
-  color: #4D2828;
-  font-size: 18px;
-}
-
-.button_down{
-  background-color: #0aeb7e;
-  padding: 15px 25px;
-  border-radius: 10px;
-  margin-top: 20px;
-  cursor: pointer;
-}
-
-.back{
-  background-color: rgb(240, 62, 98);
-}
-
-.text{
-  font: 200;
-  text-align: center;
-  margin-top: 10px;
+.button:hover {
+  border: white;
 }
