--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@
 .App{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   /* justify-content: center; */
   height: 100vh;
 
